// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideDrawer renders as expected when drawer is hiding 1`] = `
<div
  className="mui--no-user-select"
  id="sidedrawer"
>
  <div
    className="brand mui--appbar-line-height"
  >
    <span
      className="mui--text-title"
    >
      Frontend Grocer
    </span>
  </div>
  <div
    className="mui-divider"
  />
  <ul>
    <li>
      <strong>
        Category 1
      </strong>
      <ul>
        <li>
          <a
            href="#"
          >
            Item 1
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 2
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 3
          </a>
        </li>
      </ul>
    </li>
    <li>
      <strong>
        Category 2
      </strong>
      <ul>
        <li>
          <a
            href="#"
          >
            Item 1
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 2
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 3
          </a>
        </li>
      </ul>
    </li>
    <li>
      <strong>
        Category 3
      </strong>
      <ul>
        <li>
          <a
            href="#"
          >
            Item 1
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 2
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 3
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`SideDrawer renders as expected when drawer is showing 1`] = `
<div
  className="mui--no-user-select active"
  id="sidedrawer"
>
  <div
    className="brand mui--appbar-line-height"
  >
    <span
      className="mui--text-title"
    >
      Frontend Grocer
    </span>
  </div>
  <div
    className="mui-divider"
  />
  <ul>
    <li>
      <strong>
        Category 1
      </strong>
      <ul>
        <li>
          <a
            href="#"
          >
            Item 1
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 2
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 3
          </a>
        </li>
      </ul>
    </li>
    <li>
      <strong>
        Category 2
      </strong>
      <ul>
        <li>
          <a
            href="#"
          >
            Item 1
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 2
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 3
          </a>
        </li>
      </ul>
    </li>
    <li>
      <strong>
        Category 3
      </strong>
      <ul>
        <li>
          <a
            href="#"
          >
            Item 1
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 2
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Item 3
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
